--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
 body {
     font-family: 'poppins';
     color: #fff;
+    /* font-family: Arial, sans-serif; */
+    /* color: #333; */
+    background-color: #fff;
+    scroll-behavior: smooth;
 }
 
 header {
@@ -109,6 +113,10 @@ nav a {
     background-color: #4CAF50;
     border-radius: 10px;
     width: 30%;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.12), 0 1.5px 4px rgba(0, 0, 0, 0.8);
+}
+.service-card:hover{
+    box-shadow: 0 8px 32px rgba(0,0,0,0.18), 0 3px 8px rgba(0,0,0,0.12);
 }
 
 .service-card img {
@@ -139,6 +147,7 @@ body {
     font-family: Arial, sans-serif;
     color: #333;
     background-color: #fff;
+    scroll-behavior: smooth;
 }
 
 .header {
@@ -168,7 +177,7 @@ h2 {
 
 .experience p {
     font-size: 120%;
-    margin-bottom: 30px;
+    margin: 30px;
     font-family: 'poppins';
 }
 
@@ -180,6 +189,7 @@ h2 {
     text-decoration: none;
     border-radius: 5px;
     margin-left: 2cm;
+    cursor: pointer;
 }
 
 #learn-more-btn:hover {
